--- a/edu.kit.ipd.sdq.kaps.model.modificationmarks.editor/plugin.xml
+++ b/edu.kit.ipd.sdq.kaps.model.modificationmarks.editor/plugin.xml
@@ -13,7 +13,7 @@
       <wizard
             id="edu.kit.ipd.sdq.kaps.model.modificationmarks.presentation.modificationmarksModelWizardID"
             name="%_UI_modificationmarksModelWizard_label"
-            class="edu.kit.ipd.sdq.kaps.model.modificationmarks.presentation.modificationmarksModelWizard"
+            class="edu.kit.ipd.sdq.kamp4aps.model.modificationmarks.presentation.modificationmarksModelWizard"
             category="edu.kit.ipd.sdq.kaps.wizard.category"
             icon="icons/full/obj16/modificationmarksModelFile.gif">
          <description>%_UI_modificationmarksModelWizard_description</description>
@@ -27,8 +27,8 @@
             name="%_UI_modificationmarksEditor_label"
             icon="icons/full/obj16/modificationmarksModelFile.gif"
             extensions="modificationmarks"
-            class="edu.kit.ipd.sdq.kaps.model.modificationmarks.presentation.modificationmarksEditor"
-            contributorClass="edu.kit.ipd.sdq.kaps.model.modificationmarks.presentation.modificationmarksActionBarContributor">
+            class="edu.kit.ipd.sdq.kamp4aps.model.modificationmarks.presentation.modificationmarksEditor"
+            contributorClass="edu.kit.ipd.sdq.kamp4aps.model.modificationmarks.presentation.modificationmarksActionBarContributor">
       </editor>
    </extension>
 
@@ -39,14 +39,14 @@
             id="edu.kit.ipd.sdq.kaps.model.modificationmarks.editor.objectContributionkaps1"
             objectClass="edu.kit.ipd.sdq.kaps.model.modificationmarks.KAPSModificationRepository">
          <action
-               class="edu.kit.ipd.sdq.kaps.model.modificationmarks.editor.ArchitectureBasedWorkplanDerivationAction"
+               class="edu.kit.ipd.sdq.kamp4aps.model.modificationmarks.editor.ArchitectureBasedWorkplanDerivationAction"
                icon="../edu.kit.ipd.sdq.amp/icons/run.png"
                id="edu.kit.ipd.sdq.kaps.model.modificationmarks.editor.actionArchitectureBasedWorkplanDerivation"
                label="Step 5: Calculate activities"
                menubarPath="edit">
          </action>
          <action
-               class="edu.kit.ipd.sdq.kaps.model.modificationmarks.editor.ChangePropagationAction"
+               class="edu.kit.ipd.sdq.kamp4aps.model.modificationmarks.editor.ChangePropagationAction"
                icon="../edu.kit.ipd.sdq.amp/icons/run.png"
                id="edu.kit.ipd.sdq.kaps.model.modificationmarks.editor.actionChangePropagation"
                label="Step 3: Calculate change propagation"
