--- a/edu.kit.ipd.sdq.kaps.model.fieldofactivityannotations.editor/.classpath
+++ b/edu.kit.ipd.sdq.kaps.model.fieldofactivityannotations.editor/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/edu.kit.ipd.sdq.kaps.model.modificationmarks"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/edu.kit.ipd.sdq.kamp4aps.model.modificationmarks"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
