--- a/edu.kit.ipd.sdq.kaps.buckminster/.project
+++ b/edu.kit.ipd.sdq.kaps.buckminster/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>edu.kit.ipd.sdq.kaps.buckminster</name>
+	<name>edu.kit.ipd.sdq.kamp4aps.buckminster</name>
 	<comment></comment>
 	<projects>
 	</projects>
