--- a/edu.kit.ipd.sdq.kaps.model.fieldofactivityannotations.editor/plugin.xml
+++ b/edu.kit.ipd.sdq.kaps.model.fieldofactivityannotations.editor/plugin.xml
@@ -12,7 +12,7 @@
             id="org.eclipse.emf.ecore.Wizard.category.ID"
             name="%_UI_Wizard_category"/>
       <wizard
-            id="edu.kit.ipd.sdq.kaps.model.fieldofactivityannotations.presentation.FieldofactivityannotationsModelWizardID"
+            id="edu.kit.ipd.sdq.kamp4aps.model.fieldofactivityannotations.presentation.FieldofactivityannotationsModelWizardID"
             name="%_UI_FieldofactivityannotationsModelWizard_label"
             class="edu.kit.ipd.sdq.kamp4aps.model.fieldofactivityannotations.presentation.FieldofactivityannotationsModelWizard"
             category="org.eclipse.emf.ecore.Wizard.category.ID"
@@ -25,7 +25,7 @@
    <extension point="org.eclipse.ui.editors">
       <!-- @generated Fieldofactivityannotations -->
       <editor
-            id="edu.kit.ipd.sdq.kaps.model.fieldofactivityannotations.presentation.FieldofactivityannotationsEditorID"
+            id="edu.kit.ipd.sdq.kamp4aps.model.fieldofactivityannotations.presentation.FieldofactivityannotationsEditorID"
             name="%_UI_FieldofactivityannotationsEditor_label"
             icon="icons/full/obj16/FieldofactivityannotationsModelFile.gif"
             extensions="fieldofactivityannotations"
