20170211_4 from 200 down to 67 errors

--- a/edu.kit.ipd.sdq.kaps.model.modificationmarks.edit/plugin.properties
+++ b/edu.kit.ipd.sdq.kaps.model.modificationmarks.edit/plugin.properties
@@ -315,3 +315,5 @@ _UI_ChangePropagationDueToHardwareChange_busCableModifications_feature = Bus Cab
 _UI_KAPSSeedModifications_busMasterModifications_feature = Bus Master Modifications
 _UI_KAPSSeedModifications_busSlaveModifications_feature = Bus Slave Modifications
 _UI_KAPSSeedModifications_microswitchModuleModifications_feature = Microswitch Module Modifications
+_UI_ModifyModule_type = Modify Module
+_UI_ModifyStucture_type = Modify Stucture
