--- a/edu.kit.ipd.sdq.kaps.model.modificationmarks.edit/plugin.properties
+++ b/edu.kit.ipd.sdq.kaps.model.modificationmarks.edit/plugin.properties
@@ -317,3 +317,4 @@ _UI_KAPSSeedModifications_busSlaveModifications_feature = Bus Slave Modification
 _UI_KAPSSeedModifications_microswitchModuleModifications_feature = Microswitch Module Modifications
 _UI_ModifyModule_type = Modify Module
 _UI_ModifyStucture_type = Modify Stucture
+_UI_ModifyStructure_type = Modify Structure
