--- a/edu.kit.ipd.sdq.kamp4aps.Iec61131_3.editor/.project
+++ b/edu.kit.ipd.sdq.kamp4aps.Iec61131_3.editor/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Iec61131_3.editor</name>
+	<name>edu.kit.ipd.sdq.kamp4aps.Iec61131_3.editor</name>
 	<comment></comment>
 	<projects>
 	</projects>
