add prefix "edu.kit.ipd.sdq.kamp4aps." to projects

--- a/edu.kit.ipd.sdq.kamp4aps.xPPU/.project
+++ b/edu.kit.ipd.sdq.kamp4aps.xPPU/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>xPPU</name>
+	<name>edu.kit.ipd.sdq.kamp4aps.xPPU</name>
 	<comment></comment>
 	<projects>
 	</projects>
