--- a/edu.kit.ipd.sdq.kamp4aps.model.modificationmarks.edit/plugin.properties
+++ b/edu.kit.ipd.sdq.kamp4aps.model.modificationmarks.edit/plugin.properties
@@ -318,3 +318,7 @@ _UI_KAPSSeedModifications_microswitchModuleModifications_feature = Microswitch M
 _UI_ModifyModule_type = Modify Module
 _UI_ModifyStucture_type = Modify Stucture
 _UI_ModifyStructure_type = Modify Structure
+_UI_ChangePropagationDueToHardwareChange_interfaceModification_feature = Interface Modification
+_UI_ChangePropagationDueToHardwareChange_modifyComponents_feature = Modify Components
+_UI_ChangePropagationDueToHardwareChange_interfaceModifications_feature = Interface Modifications
+_UI_ChangePropagationDueToHardwareChange_componentModifications_feature = Component Modifications
