--- a/edu.kit.ipd.sdq.kamp4aps/plugin.xml
+++ b/edu.kit.ipd.sdq.kamp4aps/plugin.xml
@@ -10,21 +10,21 @@
          <menu
                icon="../edu.kit.ipd.sdq.amp/icons/edit.png"
                id="edu.kit.ipd.sdq.kaps.menukaps"
-               label="KAPS Analysis">
+               label="KAMP4aPS Analysis">
          </menu>
          <action
                class="edu.kit.ipd.sdq.kamp4aps.ui.CreateEmptyBaseModelAction"
                icon="../edu.kit.ipd.sdq.amp/icons/filenew.png"
                id="edu.kit.ipd.sdq.kaps.action1"
-               label="Create empty KAPS architecture"
-               menubarPath="kaps">
+               label="Create empty KAMP4aPS architecture"
+               menubarPath="kamp4aps">
          </action>
          <action
                class="edu.kit.ipd.sdq.kamp4aps.ui.DeriveWorkplanAction"
                icon="../edu.kit.ipd.sdq.amp/icons/run.png"
                id="edu.kit.ipd.sdq.kaps.action3"
-               label="Derive KAPS workplan"
-               menubarPath="kaps">
+               label="Derive KAMP4aPS workplan"
+               menubarPath="kamp4aps">
          </action>
       </objectContribution>
    </extension>
