--- a/edu.kit.ipd.sdq.kamp4aps.model.modificationmarks.edit/plugin.properties
+++ b/edu.kit.ipd.sdq.kamp4aps.model.modificationmarks.edit/plugin.properties
@@ -322,3 +322,4 @@ _UI_ChangePropagationDueToHardwareChange_interfaceModification_feature = Interfa
 _UI_ChangePropagationDueToHardwareChange_modifyComponents_feature = Modify Components
 _UI_ChangePropagationDueToHardwareChange_interfaceModifications_feature = Interface Modifications
 _UI_ChangePropagationDueToHardwareChange_componentModifications_feature = Component Modifications
+_UI_ChangePropagationDueToHardwareChange_structureModifications_feature = Structure Modifications
