--- a/xPPU/plugin.xml
+++ b/xPPU/plugin.xml
@@ -11,7 +11,7 @@
       <package
             uri="edu.kit.ipd.sdq.kaps.xppu"
             class="xPPU.XPPUPackage"
-            genModel="model/xPPU.genmodel"/>
+            genModel="model/xPPU.old.genmodel"/>
    </extension>
 
    <extension point="org.eclipse.emf.ecore.generated_package">
@@ -19,7 +19,7 @@
       <package
             uri="edu.kit.ipd.sdq.kaps.xppu.componentrepository"
             class="xPPU.ComponentRepository.ComponentRepositoryPackage"
-            genModel="model/xPPU.genmodel"/>
+            genModel="model/xPPU.old.genmodel"/>
    </extension>
 
    <extension point="org.eclipse.emf.ecore.generated_package">
@@ -27,7 +27,7 @@
       <package
             uri="edu.kit.ipd.sdq.kaps.xppu.buscomponents"
             class="xPPU.BusComponents.BusComponentsPackage"
-            genModel="model/xPPU.genmodel"/>
+            genModel="model/xPPU.old.genmodel"/>
    </extension>
 
    <extension point="org.eclipse.emf.ecore.generated_package">
@@ -35,7 +35,7 @@
       <package
             uri="edu.kit.ipd.sdq.kaps.xppu.electroniccomponents"
             class="xPPU.ElectronicComponents.ElectronicComponentsPackage"
-            genModel="model/xPPU.genmodel"/>
+            genModel="model/xPPU.old.genmodel"/>
    </extension>
 
    <extension point="org.eclipse.emf.ecore.generated_package">
@@ -43,7 +43,7 @@
       <package
             uri="edu.kit.ipd.sdq.kaps.xppu.mechanicalcomponents"
             class="xPPU.MechanicalComponents.MechanicalComponentsPackage"
-            genModel="model/xPPU.genmodel"/>
+            genModel="model/xPPU.old.genmodel"/>
    </extension>
 
    <extension point="org.eclipse.emf.ecore.generated_package">
@@ -51,7 +51,7 @@
       <package
             uri="edu.kit.ipd.sdq.kaps.xppu.structurerepository"
             class="xPPU.StructureRepository.StructureRepositoryPackage"
-            genModel="model/xPPU.genmodel"/>
+            genModel="model/xPPU.old.genmodel"/>
    </extension>
 
    <extension point="org.eclipse.emf.ecore.generated_package">
@@ -59,7 +59,7 @@
       <package
             uri="edu.kit.ipd.sdq.kaps.xppu.modulerepository"
             class="xPPU.ModuleRepository.ModuleRepositoryPackage"
-            genModel="model/xPPU.genmodel"/>
+            genModel="model/xPPU.old.genmodel"/>
    </extension>
 
    <extension point="org.eclipse.emf.ecore.generated_package">
@@ -67,7 +67,7 @@
       <package
             uri="edu.kit.ipd.sdq.kaps.xppu.interfacerepository"
             class="xPPU.InterfaceRepository.InterfaceRepositoryPackage"
-            genModel="model/xPPU.genmodel"/>
+            genModel="model/xPPU.old.genmodel"/>
    </extension>
 
    <extension point="org.eclipse.emf.ecore.generated_package">
@@ -75,7 +75,7 @@
       <package
             uri="edu.kit.ipd.sdq.kaps.xppu.identifier"
             class="xPPU.Identifier.IdentifierPackage"
-            genModel="model/xPPU.genmodel"/>
+            genModel="model/xPPU.old.genmodel"/>
    </extension>
 
 </plugin>
