--- a/edu.kit.ipd.sdq.kamp4aps.buckminster/build.properties
+++ b/edu.kit.ipd.sdq.kamp4aps.buckminster/build.properties
@@ -1,3 +1,3 @@
 bin.includes = feature.xml
-category.id.kaps=KAPS Palladio AddOn
-category.members.kaps=edu.kit.ipd.sdq.kaps.feature
+category.id.kaps=KAMP4APS Palladio AddOn
+category.members.kamp4aps=edu.kit.ipd.sdq.kamp4aps.feature
