--- a/edu.kit.ipd.sdq.kamp4iec.model.repo.edit/plugin.properties
+++ b/edu.kit.ipd.sdq.kamp4iec.model.repo.edit/plugin.properties
@@ -76,3 +76,6 @@ _UI_Unknown_feature = Unspecified
 _UI_VariableType_NONE_literal = NONE
 _UI_VariableType_INPUT_literal = INPUT
 _UI_VariableType_OUTPUT_literal = OUTPUT
+_UI_ImplementsInterface_type = Implements Interface
+_UI_FunctionBlock_UsesInterface_feature = Uses Interface
+_UI_ImplementsInterface_Interface_feature = Interface
