xppu extension: module repository, change propagation

--- a/xPPU.edit/plugin.properties
+++ b/xPPU.edit/plugin.properties
@@ -91,6 +91,7 @@ _UI_PneumaticNetwork_type = Pneumatic Network
 _UI_Conveyor_type = Conveyor
 _UI_Crane_type = Crane
 _UI_PowerWiring_type = Power Wiring
+_UI_ModuleRepository_type = Module Repository
 _UI_Module_type = Module
 _UI_RampModule_type = Ramp Module
 _UI_PusherModule_type = Pusher Module
@@ -128,7 +129,10 @@ _UI_Plant_PlantName_feature = Plant Name
 _UI_Plant_structures_feature = Structures
 _UI_Plant_interfaceRepository_feature = Interface Repository
 _UI_Plant_componentRepository_feature = Component Repository
+_UI_Plant_moduleRepository_feature = Module Repository
 _UI_Component_connectedInterfaces_feature = Connected Interfaces
+_UI_Component_parent_feature = Parent
+_UI_Component_parentModule_feature = Parent Module
 _UI_Panel_componentRepository_feature = Component Repository
 _UI_OperationPanel_screwing_rack_feature = Screwing rack
 _UI_OperationPanel_leds_feature = Leds
@@ -179,7 +183,6 @@ _UI_TurningTable_busSlave_feature = Bus Slave
 _UI_TurningTable_busBox_feature = Bus Box
 _UI_TurningTable_busCable_feature = Bus Cable
 _UI_TurningTable_potentiometer_feature = Potentiometer
-_UI_TurningTable_parent_feature = Parent
 _UI_Controller_powersupply_feature = Powersupply
 _UI_Controller_controllerOf_feature = Controller Of
 _UI_LogicalWiring_busCable_feature = Bus Cable
@@ -219,8 +222,11 @@ _UI_Conveyor_belts_feature = Belts
 _UI_Crane_arm_feature = Arm
 _UI_Crane_mountedOn_feature = Mounted On
 _UI_Crane_vacuumgripper_feature = Vacuumgripper
-_UI_Module_modules_feature = Modules
+_UI_ModuleRepository_allModulesInPlant_feature = All Modules In Plant
 _UI_Module_parentStructure_feature = Parent Structure
+_UI_Module_modules_feature = Modules
+_UI_Module_components_feature = Components
+_UI_Module_interfaces_feature = Interfaces
 _UI_MotorModule_simpleMotor_feature = Simple Motor
 _UI_MotorModule_busSlave_feature = Bus Slave
 _UI_MotorModule_busBox_feature = Bus Box
@@ -232,6 +238,7 @@ _UI_InductiveSensorModule_busSlave_feature = Bus Slave
 _UI_PresenceSensorModule_presenceSensor_feature = Presence Sensor
 _UI_PresenceSensorModule_busSlave_feature = Bus Slave
 _UI_InterfaceRepository_allInterfacesInPlant_feature = All Interfaces In Plant
+_UI_Interface_parentElement_feature = Parent Element
 _UI_Identifier_id_feature = Id
 _UI_Unknown_feature = Unspecified
 
