ModifyMicroSwitch<Component> => ModifyMicroSwitch<Module>

--- a/edu.kit.ipd.sdq.kamp4aps.model.modificationmarks.editor/plugin.properties
+++ b/edu.kit.ipd.sdq.kamp4aps.model.modificationmarks.editor/plugin.properties
@@ -3,7 +3,7 @@
 pluginName = KAPSModificationmarks Editor
 providerName = www.example.org
 
-_UI_modificationmarksEditor_menu = &modificationmarks Editor
+_UI_ModificationmarksEditor_menu = &Modificationmarks Editor
 
 _UI_CreateChild_menu_item = &New Child
 _UI_CreateSibling_menu_item = N&ew Sibling
@@ -26,17 +26,17 @@ _UI_MultiObjectSelected = Selected {0} Objects
 
 _UI_OpenEditorError_label = Open Editor
 
-_UI_Wizard_category = KAPS Models
+_UI_Wizard_category = Example EMF Model Creation Wizards
 
 _UI_CreateModelError_message = Problems encountered in file "{0}"
 
-_UI_modificationmarksModelWizard_label = modificationmarks Model
-_UI_modificationmarksModelWizard_description = Create a new modificationmarks model
+_UI_ModificationmarksModelWizard_label = Modificationmarks Model
+_UI_ModificationmarksModelWizard_description = Create a new Modificationmarks model
 
-_UI_modificationmarksEditor_label = modificationmarks Model Editor
+_UI_ModificationmarksEditor_label = Modificationmarks Model Editor
 
-_UI_modificationmarksEditorFilenameDefaultBase = My
-_UI_modificationmarksEditorFilenameExtensions = modificationmarks
+_UI_ModificationmarksEditorFilenameDefaultBase = My
+_UI_ModificationmarksEditorFilenameExtensions = modificationmarks
 
 _UI_Wizard_label = New
 
@@ -51,10 +51,3 @@ _UI_Wizard_initial_object_description = Select a model object to create
 _UI_FileConflict_label = File Conflict
 _WARN_FileConflict = There are unsaved changes that conflict with changes made outside the editor.  Do you wish to discard this editor's changes?
 
-_UI_XPPUEditor_menu = &XPPU Editor
-_UI_XPPUModelWizard_label = XPPU Model
-_UI_XPPUModelWizard_description = Create a new XPPU model
-_UI_XPPUEditor_label = XPPU Model Editor
-_UI_XPPUEditorFilenameDefaultBase = My
-_UI_XPPUEditorFilenameExtensions = xppu
-
