--- a/edu.kit.ipd.sdq.kamp4aps.model.modificationmarks.edit/plugin.xml
+++ b/edu.kit.ipd.sdq.kamp4aps.model.modificationmarks.edit/plugin.xml
@@ -7,10 +7,10 @@
 <plugin>
 
    <extension point="org.eclipse.emf.edit.itemProviderAdapterFactories">
-      <!-- @generated KAPSModificationsmarks -->
+      <!-- @generated KAPSModificationmarks -->
       <factory
             uri="http://sdq.ipd.kit.edu/KAPSModificationmarks/1.0"
-            class="edu.kit.ipd.sdq.kamp4aps.model.modificationmarks.provider.modificationmarksItemProviderAdapterFactory"
+            class="edu.kit.ipd.sdq.kamp4aps.model.modificationmarks.provider.ModificationmarksItemProviderAdapterFactory"
             supportedTypes=
               "org.eclipse.emf.edit.provider.IEditingDomainItemProvider
                org.eclipse.emf.edit.provider.IStructuredItemContentProvider
