--- a/edu.kit.ipd.sdq.kamp4aps.model.modificationmarks.edit/plugin.properties
+++ b/edu.kit.ipd.sdq.kamp4aps.model.modificationmarks.edit/plugin.properties
@@ -29,6 +29,7 @@ _UI_ModifyBusMaster_type = Modify Bus Master
 _UI_ModifyBusSlave_type = Modify Bus Slave
 _UI_ModifyBusCable_type = Modify Bus Cable
 _UI_ModifySensor_type = Modify Sensor
+_UI_ModifyRamp_type = Modify Ramp
 _UI_Unknown_type = Object
 
 _UI_Unknown_datatype= Value
