--- a/edu.kit.ipd.sdq.kamp4aps.model.modificationmarks.editor/plugin.properties
+++ b/edu.kit.ipd.sdq.kamp4aps.model.modificationmarks.editor/plugin.properties
@@ -36,7 +36,7 @@ _UI_KAMP4aPSModificationmarksModelWizard_description = Create a new KAMP4aPSModi
 _UI_KAMP4aPSModificationmarksEditor_label = KAMP4aPSModificationmarks Model Editor
 
 _UI_KAMP4aPSModificationmarksEditorFilenameDefaultBase = My
-_UI_KAMP4aPSModificationmarksEditorFilenameExtensions = kamp4apsmodificationmarks
+_UI_KAMP4aPSModificationmarksEditorFilenameExtensions = modificationmarks
 
 _UI_Wizard_label = New
 
